--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-pyodbc
-tableauserverclient
-sqlalchemy
-requests
-os
-config
-pandas
-pandas.io.sql
-datetime
+pip install pyodbc==4.0.39
+pip install tableauserverclient==0.19.0
+pip install SQLAlchemy==2.0.21
+pip install requests==2.31.0
+pip install pandas==2.0.2
